Fixed two-lines's problem with white-apace: nowrap

--- a/src/styles/Projects.module.scss
+++ b/src/styles/Projects.module.scss
@@ -76,6 +76,7 @@
                     a {
                         text-decoration: underline;
                         color: blue;
+                        white-space: nowrap;
                     }
                 }
                 
